--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <button id="submitBtn" class="btn" disabled>送出</button>
   <div id="toast" class="toast"></div>
 
-  <div class="hint">小提醒：每格 1–2 個關鍵詞最清楚（例如：監測血糖 / 注意飲食）。</div>
+  <div class="hint">小提醒：每格 1 個護理臨床推理就好。</div>
 </div>
 
 <script>
