--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>九宮格回填（手機版）</title>
+<title>九宮格回填（一起來推理）</title>
 <style>
   :root{
     --bg:#fff8fb; --card:#ffffff; --ink:#2b2f36; --muted:#6b7280;
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div class="wrap">
-  <h1>九宮格回填（手機版）</h1>
+  <h1>九宮格回填（一起來推理）</h1>
 
   <div class="head">
     <div class="row">
@@ -61,10 +61,10 @@
     </div>
   </div>
 
-  <div class="hint">填寫順序：從 <b>12 點方向</b>開始，<b>順時針</b>依序填入 1→9 格（中心題目由主題提供）。</div>
+  <div class="hint">填寫順序：從 <b>a1</b>開始，<b>順時針</b>依序填入 1→9 格（中心題目由主題提供）。</div>
 
   <div class="grid" id="grid">
-    <textarea id="a1" placeholder="a1（12點）"></textarea>
+    <textarea id="a1" placeholder="a1"></textarea>
     <textarea id="a2" placeholder="a2"></textarea>
     <textarea id="a3" placeholder="a3"></textarea>
     <textarea id="a4" placeholder="a4"></textarea>
