--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <div class="hint">填寫順序：從 <b>a1</b>開始，<b>順時針</b>依序填入 1→9 格。</div>
+  <div class="hint">填寫順序：會是 <b>螢幕上呈現九宮格</b>，<b>排序</b>。</div>
 
   <div class="grid" id="grid">
     <textarea id="a1" placeholder="a1"></textarea>
