--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <div class="hint">填寫順序：會是 <b>螢幕上呈現九宮格</b>，<b>排序</b>。</div>
+  <div class="hint">填寫順序：會是 <b>螢幕上看到的九宮格畫面喔~</b>。</div>
 
   <div class="grid" id="grid">
     <textarea id="a1" placeholder="a1"></textarea>
