--- a/Dashboard.html
+++ b/Dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> <b>護理臨床推理~</b> 大家一起來賓果 </title>
+  <title><b>護理臨床推理~</b> 大家一起來賓果</title>
   <style>
     body {
       font-family: "Noto Sans TC", sans-serif;
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <h1 id="topicTitle">九宮格賓果</h1>
+  <h1 id="topicTitle"><b>護理臨床推理~</b> 大家一起來賓果</h1>
   <div class="grid" id="bingoGrid">
     <!-- 動態生成 -->
   </div>
