--- a/Dashboard.html
+++ b/Dashboard.html
@@ -50,7 +50,7 @@
   </div>
 
   <script>
-    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbwiG0HcGi6ZXqJ_DTTt-DGhQGizSC1TnNKGQwIJWwzebFslYqZr7U-qhj16wbNNa7vI/exec";
+    const BACKEND_URL = 'https://script.google.com/macros/s/AKfycbwiG0HcGi6ZXqJ_DTTt-DGhQGizSC1TnNKGQwIJWwzebFslYqZr7U-qhj16wbNNa7vI/exec';
     
     // 取得網址參數 ?topic=血糖監測&group=1
     const urlParams = new URLSearchParams(window.location.search);
