--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   <div class="hint">填寫順序：會是 <b>螢幕上看到的九宮格畫面</b>喔～</div>
 
   <div class="grid">
-    <textarea id="a1"  placeholder="a1（12點）"></textarea>
+    <textarea id="a1"  placeholder="a1"></textarea>
     <textarea id="a2"  placeholder="a2"></textarea>
     <textarea id="a3"  placeholder="a3"></textarea>
     <textarea id="a4"  placeholder="a4"></textarea>
-    <textarea id="a5  " placeholder="a5"></textarea>
+    <textarea id="a5"  placeholder="填上小組的題目"></textarea>
     <textarea id="a6"  placeholder="a6"></textarea>
     <textarea id="a7"  placeholder="a7"></textarea>
     <textarea id="a8"  placeholder="a8"></textarea>
