--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <a id="goBoard" class="link" target="_blank" rel="noopener">👉 送出後開啟看板</a>
   <div id="toast" class="toast"></div>
 
-  <div class="hint">小提醒：每格 1–2 個護理臨床關鍵即可。</div>
+  <div class="hint">小提醒：每格填入<b>1個</b> 護理臨床推理。</div>
 </div>
 
 <script>
