--- a/index.html
+++ b/index.html
@@ -5,32 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>🌸 護理臨床推理（一起來賓果~）</title>
 <style>
-  :root{
-    --bg1:#fff5f9; --bg2:#f4fbff; --card:#ffffff; --ink:#2b2f36;
-    --muted:#6b7280; --accent:#ff9ac2; --grid:#e9e9ef; --btn:#4b7bec;
-  }
+  :root{--bg1:#fff5f9;--bg2:#f4fbff;--card:#fff;--ink:#2b2f36;--muted:#6b7280;--grid:#e9e9ef;--btn:#4b7bec}
   *{box-sizing:border-box}
   body{margin:0;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:var(--ink);
        font-family:ui-rounded,"PingFang TC","Noto Sans TC",system-ui,-apple-system,sans-serif;}
   .wrap{max-width:960px;margin:0 auto;padding:16px}
   h1{font-size:22px;margin:4px 0 12px}
-  .card{background:var(--card);border:2px solid #ffe2ef;border-radius:16px;
-        box-shadow:0 10px 20px rgba(255,160,190,.18);padding:12px 12px 16px;margin-bottom:12px}
+  .card{background:var(--card);border:2px solid #ffe2ef;border-radius:16px;box-shadow:0 10px 20px rgba(255,160,190,.18);
+        padding:12px 12px 16px;margin-bottom:12px}
   .row{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-bottom:8px}
-  .pill{display:inline-block;padding:6px 12px;border-radius:999px;
-        background:linear-gradient(90deg,#ffd9ec,#c7eeff);border:1px solid #ffd9ec;font-size:13px}
+  .pill{display:inline-block;padding:6px 12px;border-radius:999px;background:linear-gradient(90deg,#ffd9ec,#c7eeff);border:1px solid #ffd9ec;font-size:13px}
   select{font-size:16px;padding:8px 10px;border-radius:10px;border:1px solid #dfe3ea;background:#fff}
   .badge{background:#fff;border:1px solid #ffd9ea;padding:8px 10px;border-radius:10px;font-size:14px}
   .groups{display:flex;gap:8px;flex-wrap:wrap}
-  .gbtn{flex:1;min-width:76px;text-align:center;padding:10px 0;border-radius:12px;
-        border:2px solid #dfe7ff;background:#fff;font-size:16px}
+  .gbtn{flex:1;min-width:76px;text-align:center;padding:10px 0;border-radius:12px;border:2px solid #dfe7ff;background:#fff;font-size:16px}
   .gbtn.active{background:#e6f0ff;border-color:#bcd3ff}
   .hint{color:var(--muted);font-size:14px;margin:8px 2px 12px}
   .grid{display:grid;grid-template-columns:1fr;gap:10px}
   @media(min-width:640px){.grid{grid-template-columns:repeat(3,1fr);}}
   textarea{width:100%;min-height:86px;padding:10px;font-size:16px;border-radius:12px;border:1px solid var(--grid)}
-  .btn{display:inline-block;margin-top:14px;background:var(--btn);color:#fff;border:0;border-radius:12px;
-       font-size:18px;padding:14px 18px;width:100%}
+  .btn{display:inline-block;margin-top:14px;background:var(--btn);color:#fff;border:0;border-radius:12px;font-size:18px;padding:14px 18px;width:100%}
   .btn[disabled]{opacity:.5}
   .toast{margin-top:10px;font-size:15px}
   .ok{color:#2f9e44}.err{color:#c92a2a}
@@ -46,11 +40,7 @@
       <span class="pill">主題</span>
       <select id="topicSelect">
         <option value="">請選擇主題</option>
-        <option>血糖監測</option>
-        <option>輸血</option>
-        <option>利尿劑</option>
-        <option>抗生素</option>
-        <option>氧氣</option>
+        <option>血糖監測</option><option>輸血</option><option>利尿劑</option><option>抗生素</option><option>氧氣</option>
       </select>
       <span id="topicBadge" class="badge" style="display:none"></span>
     </div>
@@ -61,14 +51,14 @@
     <div class="groups" id="groupBtns"></div>
   </div>
 
-  <div class="hint">填寫順序：會是 <b>螢幕上看到的九宮格畫面</b>喔～</div>
+  <div class="hint">填寫順序是<b>九宮格賓果畫面🌸 </b></div>
 
   <div class="grid">
     <textarea id="a1" placeholder="a1"></textarea>
     <textarea id="a2" placeholder="a2"></textarea>
     <textarea id="a3" placeholder="a3"></textarea>
     <textarea id="a4" placeholder="a4"></textarea>
-    <textarea id="a5" placeholder="這邊填上小組的題目"></textarea>
+    <textarea id="a5" placeholder="這邊輸入小組抽到的醫囑"></textarea>
     <textarea id="a6" placeholder="a6"></textarea>
     <textarea id="a7" placeholder="a7"></textarea>
     <textarea id="a8" placeholder="a8"></textarea>
@@ -77,21 +67,20 @@
 
   <button id="submitBtn" class="btn" disabled>送出</button>
   <a id="goBoard" class="link" target="_blank" rel="noopener">👉 送出後開啟看板</a>
-  <div id="toast" class="toast"></div>
+  <div class="toast" id="toast"></div>
 
-  <div class="hint">小提醒：每格填入<b>1個</b> 護理臨床推理。</div>
+  <button id="testBtn" class="btn" style="background:#10b981;margin-top:10px">🧪 一鍵測試寫入（pingWrite）</button>
 </div>
 
 <script>
-  // ⛳ 把這裡換成「同一支」Apps Script Web App /exec（writer+reader 都走它）
-  const API_URL = 'https://script.google.com/macros/s/AKfycbzk19tD47ulOi8N9FGQSBbecd2n3_pAbtcsEKeW05-zfH0g2KyaR5_CTksbsh3Lh4Gt/exec';
+  // ✅ 同一支 Apps Script /exec（Writer + Reader 都在這）
+  const API_URL = 'https://script.google.com/macros/s/你的_EXEC_網址/exec';
 
-  // 讀 URL 預設值（可用 ?topic=...&group=... 預先帶入）
+  // 可用 ?topic=...&group=... 預設
   const sp = new URLSearchParams(location.search);
   let topic = sp.get('topic') || '';
   let group_id = sp.get('group') || '';
 
-  // 元件
   const sel   = document.getElementById('topicSelect');
   const badge = document.getElementById('topicBadge');
   const groupLabel = document.getElementById('groupLabel');
@@ -99,71 +88,54 @@
   const submitBtn  = document.getElementById('submitBtn');
   const toast      = document.getElementById('toast');
   const goBoard    = document.getElementById('goBoard');
+  const testBtn    = document.getElementById('testBtn');
 
-  // 主題 UI：若網址帶了 topic，就鎖定顯示；否則可選
   function initTopicUI(){
     if (topic) {
-      sel.style.display = 'none';
-      badge.style.display = 'inline-block';
-      badge.textContent = topic;
-      sel.value = topic;
+      sel.style.display='none'; badge.style.display='inline-block';
+      badge.textContent = topic; sel.value = topic;
     } else {
-      badge.style.display = 'none';
-      sel.addEventListener('change', () => {
-        topic = sel.value;
-        updateReady();
+      badge.style.display='none';
+      sel.addEventListener('change', ()=>{
+        topic = sel.value; updateReady();
         goBoard.href = `Dashboard.html?topic=${encodeURIComponent(topic)}&group=${encodeURIComponent(group_id||'1')}`;
       });
     }
   }
 
-  // 建立 1~5 組按鈕
   for (let i=1;i<=5;i++){
-    const b = document.createElement('button');
+    const b=document.createElement('button');
     b.type='button'; b.className='gbtn'; b.textContent=`第 ${i} 組`;
     if (group_id==i.toString()) b.classList.add('active');
-    b.addEventListener('click', ()=>{
-      group_id = String(i);
-      [...groupBtns.children].forEach(c=>c.classList.remove('active'));
-      b.classList.add('active');
-      groupLabel.textContent = `第 ${group_id} 組`;
+    b.onclick=()=>{ group_id=String(i);
+      [...groupBtns.children].forEach(c=>c.classList.remove('active')); b.classList.add('active');
+      groupLabel.textContent=`第 ${group_id} 組`;
       updateReady();
       goBoard.href = `Dashboard.html?topic=${encodeURIComponent(topic||sel.value)}&group=${encodeURIComponent(group_id)}`;
-    });
+    };
     groupBtns.appendChild(b);
   }
 
-  function updateReady(){
-    const t = topic || sel.value;
-    submitBtn.disabled = !(t && group_id);
-  }
+  function updateReady(){ submitBtn.disabled = !((topic||sel.value) && group_id); }
 
-  // 送出（用 FormData；不自設 headers，避免預檢）
-  submitBtn.addEventListener('click', async ()=>{
+  submitBtn.onclick = async ()=>{
     const t = topic || sel.value;
     if (!t || !group_id){ toast.innerHTML='<span class="err">請先選主題與組別</span>'; return; }
-
     const fd = new FormData();
-    fd.append('action','submitGrid');
-    fd.append('topic', t);
-    fd.append('group_id', group_id);
-    for (let i=1;i<=9;i++){
-      const el = document.getElementById('a'+i);
-      fd.append('a'+i, (el ? el.value.trim() : ''));
-    }
+    fd.append('action','submitGrid'); fd.append('topic',t); fd.append('group_id',group_id);
+    for (let i=1;i<=9;i++){ const el=document.getElementById('a'+i); fd.append('a'+i, (el?el.value.trim():'')); }
 
     try{
-      submitBtn.disabled = true;
-      toast.textContent = '送出中…';
-      await fetch(API_URL, { method:'POST', body: fd }); // ← 不要自設 headers
-      toast.innerHTML = '<span class="ok">送出成功！</span>';
+      submitBtn.disabled=true; toast.textContent='送出中…';
+      await fetch(API_URL, { method:'POST', body: fd }); // 不設 headers，避免預檢
+      toast.innerHTML='<span class="ok">送出成功！</span>';
       goBoard.href = `Dashboard.html?topic=${encodeURIComponent(t)}&group=${encodeURIComponent(group_id)}`;
-    }catch(err){
-      toast.innerHTML = `<span class="err">錯誤：${err.message}</span>`;
-    }finally{
-      submitBtn.disabled = false;
-    }
-  });
+    }catch(e){ toast.innerHTML=`<span class="err">錯誤：${e.message}</span>`; }
+    finally{ submitBtn.disabled=false; }
+  };
+
+  // 🧪 一鍵測試：確認後端能寫入
+  testBtn.onclick = ()=>{ window.open(`${API_URL}?action=pingWrite&topic=測試&group=9`, '_blank'); };
 
   initTopicUI();
   groupLabel.textContent = group_id ? `第 ${group_id} 組` : '未選擇';
@@ -171,3 +143,4 @@
 </script>
 </body>
 </html>
+
