--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,8 +8,8 @@
   body{margin:0;padding:20px;background:linear-gradient(180deg,#fff5f7,#f4fbff);
        font-family:ui-rounded,"PingFang TC","Noto Sans TC",system-ui,-apple-system,sans-serif;color:#2b2f36}
   h1{font-size:22px;margin:0 0 12px;text-align:center}
-  .card{max-width:560px;margin:0 auto;background:#fff;border-radius:18px;
-        border:2px solid #ffe0ec;box-shadow:0 12px 22px rgba(255,160,190,.18);padding:14px}
+  .card{max-width:560px;margin:0 auto;background:#fff;border-radius:18px;border:2px solid #ffe0ec;
+        box-shadow:0 12px 22px rgba(255,160,190,.18);padding:14px}
   .title{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
   .pill{font-size:13px;padding:6px 12px;border-radius:999px;background:linear-gradient(90deg,#ffd9ec,#c7eeff);border:1px solid #ffd9ec}
   .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-top:8px}
@@ -20,7 +20,7 @@
 </style>
 </head>
 <body>
-  <h1 id="h1">🌸 九宮格看板</h1>
+  <h1 id="h1">🌸 護理臨床推理 - 九宮格看板</h1>
   <div class="card">
     <div class="title">
       <span class="pill" id="topicPill">主題</span>
@@ -31,8 +31,8 @@
   <div class="muted">此頁每 5 秒自動更新。</div>
 
 <script>
-  // ⛳ 同一支 Apps Script /exec
-  const API_URL = 'https://script.google.com/macros/s/AKfycbwLIX201A97awOAKs9AH5J0z8W3_csE0FvkDoslK6mM8IHt1Rh0SUCBgOvan6eKSm0/exec';
+  // ✅ 同一支 Apps Script /exec
+  const API_URL = 'https://script.google.com/macros/s/AKfycbyOpTzSwhLjnGYjT2CgJ2hhADbt6XXEQA-Vh74Q-saawfnuG7L2W4-ageHDR2NDCGWX/exec';
 
   const sp = new URLSearchParams(location.search);
   const topic = sp.get('topic') || '未命名主題';
@@ -43,37 +43,36 @@
   document.getElementById('groupPill').textContent = `組別：${group}`;
   const gridEl = document.getElementById('grid');
 
-  // JSONP 取得（避免 CORS）
+  // JSONP 取資料（避免 CORS）
   function jsonp(url){
-    return new Promise((resolve, reject)=>{
-      const cb = 'cb_'+Date.now()+'_'+Math.floor(Math.random()*1000);
-      const s = document.createElement('script');
-      window[cb] = (data)=>{ resolve(data); delete window[cb]; s.remove(); };
-      s.onerror = ()=>{ reject(new Error('JSONP 載入失敗')); delete window[cb]; s.remove(); };
+    return new Promise((resolve,reject)=>{
+      const cb='cb_'+Date.now()+'_'+Math.floor(Math.random()*1000);
+      const s=document.createElement('script');
+      window[cb]=(data)=>{ resolve(data); delete window[cb]; s.remove(); };
+      s.onerror=()=>{ reject(new Error('JSONP 載入失敗')); delete window[cb]; s.remove(); };
       s.src = url + (url.includes('?')?'&':'?') + 'callback=' + cb;
       document.body.appendChild(s);
     });
   }
 
   function cell(txt, center=false){
-    const d = document.createElement('div');
-    d.className = 'cell' + (center?' center':'');
-    d.textContent = center ? `🎯 ${topic}` : (txt||'…');
-    return d;
+    const d=document.createElement('div');
+    d.className='cell'+(center?' center':'');
+    d.textContent = center ? `🎯 ${topic}` : (txt||'…'); return d;
   }
 
   async function load(){
     try{
       const url = `${API_URL}?action=getLatestGrid&topic=${encodeURIComponent(topic)}&group=${encodeURIComponent(group)}`;
-      const res = await jsonp(url); // { ok:true, grid:[...] }
+      const res = await jsonp(url);                   // { ok:true, grid:[...] }
       const cells = (res && res.ok) ? res.grid : Array(9).fill('');
-      gridEl.innerHTML = '';
+      gridEl.innerHTML='';
       for (let i=0;i<9;i++) gridEl.appendChild(cell(i===4 ? `🎯 ${topic}` : (cells[i]||''), i===4));
     }catch(e){ console.error(e); }
   }
-  load();
-  setInterval(load, 5000);
+  load(); setInterval(load, 5000);
 </script>
 </body>
 </html>
+
 
