--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <script>
   // ✅ 同一支 Apps Script /exec（Writer + Reader 都在這）
-  const API_URL = 'https://script.google.com/macros/s/你的_EXEC_網址/exec';
+  const API_URL = 'https://script.google.com/macros/s/AKfycbzs6xnlSHBP_WHf_YiQ_gDXOwjNTEfcVO32LHJ59m9UTcNVh_EZeC-kOY7v3mbqQsHX/exec';
 
   // 可用 ?topic=...&group=... 預設
   const sp = new URLSearchParams(location.search);
